--- a/static/css/index.css
+++ b/static/css/index.css
@@ -159,3 +159,21 @@ body {
 .section-div {
   height: 3em;
 }
+
+.mobile-message {
+  display: none;
+  padding: 20px;
+  border-radius: 10px;
+  margin: 20px 0;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .mobile-message {
+    display: block;
+  }
+  
+  .desktop-content {
+    display: none;
+  }
+}
